新增 H.LowCode.Configuration

--- a/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/H.LowCode.DesignEngine.Abstraction.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/H.LowCode.DesignEngine.Abstraction.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+    <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
   </ItemGroup>
 
 </Project>
