--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/H.LowCode.ThemeParts.AntBlazor.csproj
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/H.LowCode.ThemeParts.AntBlazor.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
-    <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+    <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
   </ItemGroup>
 
   <ItemGroup>
