--- a/src/Workbench/H.LowCode.Workbench.Application.Contracts/H.LowCode.Workbench.Application.Contracts.csproj
+++ b/src/Workbench/H.LowCode.Workbench.Application.Contracts/H.LowCode.Workbench.Application.Contracts.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.publish.props" />
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+	  <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
 	</ItemGroup>
 
 </Project>
