--- a/src/Workbench/H.LowCode.Workbench.Application/H.LowCode.Workbench.Application.csproj
+++ b/src/Workbench/H.LowCode.Workbench.Application/H.LowCode.Workbench.Application.csproj
@@ -8,6 +8,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Protocol\H.LowCode.Configuration\H.LowCode.Configuration.csproj" />
 	  <ProjectReference Include="..\H.LowCode.Workbench.Application.Contracts\H.LowCode.Workbench.Application.Contracts.csproj" />
 	</ItemGroup>
 
