--- a/src/Workbench/H.LowCode.Workbench.HttpApi/H.LowCode.Workbench.HttpApi.csproj
+++ b/src/Workbench/H.LowCode.Workbench.HttpApi/H.LowCode.Workbench.HttpApi.csproj
@@ -8,7 +8,7 @@
   </ItemGroup>
 
   <ItemGroup>
-      <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+      <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
       <ProjectReference Include="..\H.LowCode.Workbench.Application.Contracts\H.LowCode.Workbench.Application.Contracts.csproj" />
       <ProjectReference Include="..\H.LowCode.Workbench.Application\H.LowCode.Workbench.Application.csproj" />
   </ItemGroup>
