--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/H.LowCode.DesignEngine.Admin.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/H.LowCode.DesignEngine.Admin.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+    <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine.Model\H.LowCode.DesignEngine.Model.csproj" />
   </ItemGroup>
 
