--- a/src/DesignEngine/H.LowCode.DesignEngine.Application.Contracts/H.LowCode.DesignEngine.Application.Contracts.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Application.Contracts/H.LowCode.DesignEngine.Application.Contracts.csproj
@@ -4,7 +4,7 @@
 	<Import Project="..\..\nuget.publish.props" />
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+	  <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
 	  <ProjectReference Include="..\H.LowCode.DesignEngine.Model\H.LowCode.DesignEngine.Model.csproj" />
 	</ItemGroup>
 
