--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/H.LowCode.ComponentParts.BasicComponents.csproj
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/H.LowCode.ComponentParts.BasicComponents.csproj
@@ -17,7 +17,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.Abstraction\H.LowCode.DesignEngine.Abstraction.csproj" />
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
-		<ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+		<ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
