--- a/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+		<ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
