--- a/src/DesignEngine/H.LowCode.DesignEngine.Model/H.LowCode.DesignEngine.Model.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Model/H.LowCode.DesignEngine.Model.csproj
@@ -2,5 +2,8 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.publish.props" />
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+	</ItemGroup>
 
 </Project>
