--- a/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine.Abstraction\H.LowCode.DesignEngine.Abstraction.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine.Model\H.LowCode.DesignEngine.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
