- 列表组件 PropertySetting 新增 "表格列" 属性设置 - 其他样式修改

--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/H.LowCode.DesignEngine.Admin.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/H.LowCode.DesignEngine.Admin.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\H.LowCode.DesignEngine.Model\H.LowCode.DesignEngine.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\AppIntegration.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
 </Project>
