--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/H.LowCode.ComponentParts.BasicComponents.csproj
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/H.LowCode.ComponentParts.BasicComponents.csproj
@@ -18,6 +18,7 @@
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.Abstraction\H.LowCode.DesignEngine.Abstraction.csproj" />
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
 		<ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+		<ProjectReference Include="..\..\Protocol\H.LowCode.Model\H.LowCode.Model.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
