- 组件重命名: Lc_xxx

--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/H.LowCode.ComponentParts.BasicComponents.csproj
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/H.LowCode.ComponentParts.BasicComponents.csproj
@@ -22,7 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Content Update="Components\ButtonWrap.razor">
+		<Content Update="Components\LcButton.razor">
 			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 		</Content>
 	</ItemGroup>
