--- a/src/Host/H.LowCode.Admin.Host/appsettings.json
+++ b/src/Host/H.LowCode.Admin.Host/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "meta": {
-    "fileBasePath": "D:\\H\\code\\my\\H.LowCode\\meta"
+    "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
+    "partsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\parts"
   },
   "AllowedHosts": "*"
 }
