--- a/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+		<ProjectReference Include="..\..\Protocol\H.LowCode.Model\H.LowCode.Model.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
