新增 H.LowCode.PartsDesignEngine 物料设计器

--- a/src/Host/H.LowCode/H.LowCode.csproj
+++ b/src/Host/H.LowCode/H.LowCode.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
 	<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.Admin\H.LowCode.DesignEngine.Admin.csproj" />
+	<ProjectReference Include="..\..\DesignEngine\H.LowCode.PartsDesignEngine\H.LowCode.PartsDesignEngine.csproj" />
 	<ProjectReference Include="..\..\Parts\H.LowCode.ComponentParts.BasicComponents\H.LowCode.ComponentParts.BasicComponents.csproj" />
 	<ProjectReference Include="..\..\Parts\H.LowCode.ComponentParts.ExtensionComponents\H.LowCode.ComponentParts.ExtensionComponents.csproj" />
 	<ProjectReference Include="..\..\Workbench\H.LowCode.Workbench\H.LowCode.Workbench.csproj" />
