--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -31,7 +31,7 @@
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.7.3" />
     <PackageVersion Include="Volo.Abp.Core" Version="8.3.0" />
     <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="8.3.0" />
-    <PackageVersion Include="AntDesign" Version="0.20.4.2" />
+    <PackageVersion Include="AntDesign" Version="1.0.0-rc.1" />
     <PackageVersion Include="AntDesign.ProLayout" Version="0.20.3" />
     <!-- 个人库 -->
     <PackageVersion Include="H.Util.Blazor" Version="0.2.5" />
