--- a/src/DesignEngine/H.LowCode.DesignEngine.HttpApi/H.LowCode.DesignEngine.HttpApi.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.HttpApi/H.LowCode.DesignEngine.HttpApi.csproj
@@ -9,6 +9,8 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+	  <ProjectReference Include="..\..\Protocol\H.LowCode.Model\H.LowCode.Model.csproj" />
+	  <ProjectReference Include="..\..\Protocol\H.LowCode.PartsMetaSchema\H.LowCode.PartsMetaSchema.csproj" />
 	  <ProjectReference Include="..\H.LowCode.DesignEngine.Application.Contracts\H.LowCode.DesignEngine.Application.Contracts.csproj" />
 	  <ProjectReference Include="..\H.LowCode.DesignEngine.Application\H.LowCode.DesignEngine.Application.csproj" />
 	</ItemGroup>
