"物料中心" 重新改为 "生态中心"

--- a/src/Workbench/H.LowCode.Workbench/H.LowCode.Workbench.csproj
+++ b/src/Workbench/H.LowCode.Workbench/H.LowCode.Workbench.csproj
@@ -27,7 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Update="Pages\Parts\ThemePartsList.razor">
+	  <Content Update="Pages\Ecosystem\ThemePartsList.razor">
 	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 	  </Content>
 	</ItemGroup>
