MyApps 应用中的 SiteUrl 赋值，用于站点访问

--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
@@ -1,13 +1,23 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "meta": {
+  "Meta": {
     "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
     "partsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\parts"
   },
-  "AllowedHosts": "*"
+  "Sites": [
+    {
+      "AppId": "caseapp",
+      "SiteUrl": "https://localhost:5191"
+    },
+    {
+      "AppId": "testapp",
+      "SiteUrl": "https://localhost:5191"
+    }
+  ]
 }
