--- a/src/DesignEngine/H.LowCode.Workbench/H.LowCode.Workbench.csproj
+++ b/src/DesignEngine/H.LowCode.Workbench/H.LowCode.Workbench.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
+		<ProjectReference Include="..\..\Protocol\H.LowCode.Configuration\H.LowCode.Configuration.csproj" />
 		<ProjectReference Include="..\..\Protocol\H.LowCode.Model\H.LowCode.Model.csproj" />
 		<ProjectReference Include="..\..\Protocol\H.LowCode.PartsMetaSchema\H.LowCode.PartsMetaSchema.csproj" />
 		<ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
