--- a/src/RenderEngine/H.LowCode.RenderEngine.Host/appsettings.json
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host/appsettings.json
@@ -1,13 +1,13 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "meta": {
+  "Meta": {
     "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
     "partsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\parts"
-  },
-  "AllowedHosts": "*"
+  }
 }
