--- a/src/RenderEngine/H.LowCode.RenderEngine.Host/Properties/launchSettings.json
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "RenderEngine": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:5191;http://localhost:5190",
       "environmentVariables": {
