H.LowCode.DesignEngine.Admin 重命名为 H.LowCode.MyApp

--- a/src/DesignEngine/H.LowCode.DesignEngine.Host.Client/H.LowCode.DesignEngine.Host.Client.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host.Client/H.LowCode.DesignEngine.Host.Client.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Parts\H.LowCode.ComponentParts.BasicComponents\H.LowCode.ComponentParts.BasicComponents.csproj" />
     <ProjectReference Include="..\..\Parts\H.LowCode.ComponentParts.ExtensionComponents\H.LowCode.ComponentParts.ExtensionComponents.csproj" />
-    <ProjectReference Include="..\H.LowCode.DesignEngine.Admin\H.LowCode.DesignEngine.Admin.csproj" />
+    <ProjectReference Include="..\H.LowCode.MyApp\H.LowCode.MyApp.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
     <ProjectReference Include="..\H.LowCode.PartsDesignEngine\H.LowCode.PartsDesignEngine.csproj" />
     <ProjectReference Include="..\H.LowCode.Workbench\H.LowCode.Workbench.csproj" />
