新增 H.LowCode.EntityFrameworkCore 用于数据存储（空应用，待实现） 新增 H.LowCode.DbMigrator 用于数据库迁移（空应用，待实现）

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,12 +7,10 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- 官方库 -->
-    <PackageVersion Include="BlazorMonaco" Version="3.2.0" />
-    <PackageVersion Include="Mapsui.Blazor" Version="4.1.7" />
-    <PackageVersion Include="Markdig" Version="0.31.0" />
+    <PackageVersion Include="System.Net.Http.Json" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.0" />
-    <PackageVersion Include="System.Net.Http.Json" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components" Version="8.0.8" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.8" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.8" />
@@ -22,19 +20,28 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Scripting" Version="4.6.0" />
+    <!-- 第三方库 -->
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.8.0" />
+    <PackageVersion Include="Volo.Abp.Core" Version="8.3.1" />
+    <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="8.3.1" />
+    <PackageVersion Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="8.3.0" />
+    <PackageVersion Include="AntDesign" Version="1.0.0-rc.1" />
+    <PackageVersion Include="AntDesign.ProLayout" Version="0.20.3" />
+    <PackageVersion Include="BlazorMonaco" Version="3.2.0" />
+    <PackageVersion Include="Mapsui.Blazor" Version="4.1.7" />
+    <PackageVersion Include="Markdig" Version="0.31.0" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="8.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Async" Version="2.0.0" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageVersion Include="Serilog.Settings.Configuration" Version="8.0.2" />
+    <!-- 个人库 -->
+    <PackageVersion Include="H.Util.Blazor" Version="0.2.5" />
+    <PackageVersion Include="H.Extensions.System" Version="0.2.1" />
     <!-- 单测 -->
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageVersion Include="xunit" Version="2.5.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
-    <!-- 第三方库 -->
-    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.7.3" />
-    <PackageVersion Include="Volo.Abp.Core" Version="8.3.0" />
-    <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="8.3.0" />
-    <PackageVersion Include="AntDesign" Version="1.0.0-rc.1" />
-    <PackageVersion Include="AntDesign.ProLayout" Version="0.20.3" />
-    <!-- 个人库 -->
-    <PackageVersion Include="H.Util.Blazor" Version="0.2.5" />
-    <PackageVersion Include="H.Extensions.System" Version="0.2.1" />
   </ItemGroup>
 </Project>
