- ComponentPropertySchema 新增 IsSupportDataSource 属性，用于控制 PropertySetting.razor 中是否显示 "数据源" 配置项 - H.LowCode.MetaSchema 中所有 Enum 枚举全部提取为独立文件 - 页面背景色由默认灰色改为 白色

--- a/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/H.LowCode.DesignEngine.Abstraction.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/H.LowCode.DesignEngine.Abstraction.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\H.LowCode.ComponentBase\H.LowCode.ComponentBase.csproj" />
     <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
   </ItemGroup>
 
