- 新增 H.LowCode.Repository.JsonFile、H.LowCode.Repository.RemoteService 不同元数据仓储实现 - 新增 EntityFrameworkCore 动态加载实体（存在 bug 待解决）

--- a/src/Common/H.LowCode.EntityFrameworkCore/H.LowCode.EntityFrameworkCore.csproj
+++ b/src/Common/H.LowCode.EntityFrameworkCore/H.LowCode.EntityFrameworkCore.csproj
@@ -4,11 +4,14 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
 	  <PackageReference Include="Volo.Abp.Core" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+	  <ProjectReference Include="..\H.LowCode.Domain\H.LowCode.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
