--- a/src/DesignEngine/H.LowCode.DesignEngine.Application.Contracts/H.LowCode.DesignEngine.Application.Contracts.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Application.Contracts/H.LowCode.DesignEngine.Application.Contracts.csproj
@@ -2,6 +2,9 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.publish.props" />
+	<ItemGroup>
+	  <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" />
+	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
