--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=localdb\\MSSQLLocalDB;Database=H_LowCode;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Meta": {
     "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
     "partsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\parts"
