--- a/src/RenderEngine/H.LowCode.RenderEngine.Application/H.LowCode.RenderEngine.Application.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Application/H.LowCode.RenderEngine.Application.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Common\H.LowCode.Configuration\H.LowCode.Configuration.csproj" />
+	  <ProjectReference Include="..\..\Common\H.LowCode.Domain\H.LowCode.Domain.csproj" />
 	  <ProjectReference Include="..\H.LowCode.RenderEngine.Application.Contracts\H.LowCode.RenderEngine.Application.Contracts.csproj" />
 	</ItemGroup>
 
