--- a/src/RenderEngine/H.LowCode.RenderEngine.Host/H.LowCode.RenderEngine.Host.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host/H.LowCode.RenderEngine.Host.csproj
@@ -8,6 +8,9 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+		<ProjectReference Include="..\..\Common\H.LowCode.EntityFrameworkCore\H.LowCode.EntityFrameworkCore.csproj" />
+		<ProjectReference Include="..\..\Common\H.LowCode.Repository.JsonFile\H.LowCode.Repository.JsonFile.csproj" />
+		<ProjectReference Include="..\..\Common\H.LowCode.Repository.RemoteService\H.LowCode.Repository.RemoteService.csproj" />
 		<ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.HttpApi\H.LowCode.RenderEngine.HttpApi.csproj" />
 		<ProjectReference Include="..\H.LowCode.RenderEngine.Host.Client\H.LowCode.RenderEngine.Host.Client.csproj" />
 	</ItemGroup>
