--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/H.LowCode.DesignEngine.Host.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/H.LowCode.DesignEngine.Host.csproj
@@ -8,6 +8,9 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+		<ProjectReference Include="..\..\Common\H.LowCode.EntityFrameworkCore\H.LowCode.EntityFrameworkCore.csproj" />
+		<ProjectReference Include="..\..\Common\H.LowCode.Repository.JsonFile\H.LowCode.Repository.JsonFile.csproj" />
+		<ProjectReference Include="..\..\Common\H.LowCode.Repository.RemoteService\H.LowCode.Repository.RemoteService.csproj" />
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.HttpApi\H.LowCode.DesignEngine.HttpApi.csproj" />
 		<ProjectReference Include="..\H.LowCode.DesignEngine.Host.Client\H.LowCode.DesignEngine.Host.Client.csproj" />
 	</ItemGroup>
