--- a/src/DesignEngine/H.LowCode.DesignEngine.HttpApi/H.LowCode.DesignEngine.HttpApi.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.HttpApi/H.LowCode.DesignEngine.HttpApi.csproj
@@ -8,6 +8,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Common\H.LowCode.Configuration\H.LowCode.Configuration.csproj" />
 	  <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
 	  <ProjectReference Include="..\..\Common\H.LowCode.Model\H.LowCode.Model.csproj" />
 	  <ProjectReference Include="..\..\Protocol\H.LowCode.PartsMetaSchema\H.LowCode.PartsMetaSchema.csproj" />
