--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,6 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- 官方库 -->
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageVersion Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageVersion Include="System.Net.Http.Json" Version="8.0.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageVersion Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
@@ -25,6 +27,8 @@
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.8.1" />
     <PackageVersion Include="Volo.Abp.Core" Version="8.3.1" />
     <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="8.3.1" />
+    <PackageVersion Include="Volo.Abp.Ddd.Application.Contracts" Version="8.3.1" />
+    <PackageVersion Include="Volo.Abp.Ddd.Domain" Version="8.3.1" />
     <PackageVersion Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="8.3.0" />
     <PackageVersion Include="AntDesign" Version="1.0.0-rc.1" />
     <PackageVersion Include="AntDesign.ProLayout" Version="0.20.3" />
