实现基于 Meta 生成 EFCore 的 Migration 迁移类

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- 官方库 -->
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageVersion Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageVersion Include="System.Net.Http.Json" Version="8.0.1" />
