--- a/src/Tools/H.LowCode.DbMigrator/appsettings.json
+++ b/src/Tools/H.LowCode.DbMigrator/appsettings.json
@@ -1,5 +1,9 @@
 {
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Server=localdb\\MSSQLLocalDB;Database=H_LowCode;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Meta": {
+    "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
+    "partsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\parts"
   }
 }
