--- a/src/Tools/H.LowCode.DbMigrator/appsettings.serilog.json
+++ b/src/Tools/H.LowCode.DbMigrator/appsettings.serilog.json
@@ -17,7 +17,7 @@
             {
               "Name": "File",
               "Args": {
-                "path": "../Delivery_Logs/log_.txt",
+                "path": "../Logs/log_.txt",
                 "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
                 "rollOnFileSizeLimit": true,
                 "fileSizeLimitBytes": 10485760, //10M
