--- a/src/Common/H.LowCode.EntityFrameworkCore/H.LowCode.EntityFrameworkCore.csproj
+++ b/src/Common/H.LowCode.EntityFrameworkCore/H.LowCode.EntityFrameworkCore.csproj
@@ -4,8 +4,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
-	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
 	  <PackageReference Include="Volo.Abp.Core" />
 	</ItemGroup>
 
