--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,37 +7,38 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- 官方库 -->
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
-    <PackageVersion Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
-    <PackageVersion Include="System.Net.Http.Json" Version="8.0.1" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageVersion Include="System.Net.Http.Json" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
-    <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.1" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components" Version="8.0.10" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.10" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
+    <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" />
     <!-- 分析器 -->
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Scripting" Version="4.6.0" />
-    <!-- 第三方库 -->
-    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.8.1" />
-    <PackageVersion Include="Volo.Abp.Core" Version="8.3.1" />
-    <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="8.3.1" />
-    <PackageVersion Include="Volo.Abp.Ddd.Application.Contracts" Version="8.3.1" />
-    <PackageVersion Include="Volo.Abp.Ddd.Domain" Version="8.3.1" />
+    <!-- abp -->
+    <PackageVersion Include="Volo.Abp.Core" Version="9.0.0-rc.2" />
+    <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="9.0.0-rc.2" />
+    <PackageVersion Include="Volo.Abp.Ddd.Application.Contracts" Version="9.0.0-rc.2" />
+    <PackageVersion Include="Volo.Abp.Ddd.Domain" Version="9.0.0-rc.2" />
     <PackageVersion Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="8.3.0" />
-    <PackageVersion Include="AntDesign" Version="1.0.0-rc.1" />
-    <PackageVersion Include="AntDesign.ProLayout" Version="0.20.3" />
+    <!-- 第三方库 -->
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="7.0.0" />
+    <PackageVersion Include="AntDesign" Version="1.0.0" />
+    <PackageVersion Include="AntDesign.ProLayout" Version="1.0.0" />
     <PackageVersion Include="BlazorMonaco" Version="3.2.0" />
-    <PackageVersion Include="Mapsui.Blazor" Version="4.1.7" />
+    <PackageVersion Include="Mapsui.Blazor" Version="4.1.8" />
     <PackageVersion Include="Markdig" Version="0.31.0" />
     <PackageVersion Include="Serilog.Extensions.Logging" Version="8.0.0" />
-    <PackageVersion Include="Serilog.Sinks.Async" Version="2.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Async" Version="2.1.0" />
     <PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageVersion Include="Serilog.Settings.Configuration" Version="8.0.4" />
