- 处理 H.LowCode.DbMigrator 迁移问题

--- a/src/Tools/H.LowCode.DbMigrator/appsettings.json
+++ b/src/Tools/H.LowCode.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localdb\\MSSQLLocalDB;Database=H_LowCode;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=H_LowCode;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Meta": {
     "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
