--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localdb\\MSSQLLocalDB;Database=H_LowCode;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=H_LowCode;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Meta": {
     "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
