--- a/src/Tools/H.LowCode.DbMigrator/H.LowCode.DbMigrator.csproj
+++ b/src/Tools/H.LowCode.DbMigrator/H.LowCode.DbMigrator.csproj
@@ -29,4 +29,13 @@
 		<ProjectReference Include="..\..\Common\H.LowCode.Repository.JsonFile\H.LowCode.Repository.JsonFile.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="appsettings.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="appsettings.serilog.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
