- 项目全面切换为 abp (前期仅使用的 module, 后续将使用更多特性, 如动态api、RemoteService、API代理客户端等) - 尝试将 razor 页面中的 api 请求切换为 接口调用(根据当前渲染模式, Server 模式基于 ioc 调用, webassembly 模式基于 api 代理实现 http 调用)

--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
@@ -13,6 +13,12 @@
     "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
     "partsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\parts"
   },
+  "RemoteServices": {
+    "designengine": {
+      "BaseUrl": "https://localhost:5181",
+      "UseCurrentAccessToken": "false"
+    }
+  },
   "Sites": [
     {
       "AppId": "caseapp",
