--- a/src/DesignEngine/H.LowCode.Workbench/H.LowCode.Workbench.csproj
+++ b/src/DesignEngine/H.LowCode.Workbench/H.LowCode.Workbench.csproj
@@ -22,6 +22,7 @@
 		<ProjectReference Include="..\..\Common\H.LowCode.Model\H.LowCode.Model.csproj" />
 		<ProjectReference Include="..\..\Protocol\H.LowCode.PartsMetaSchema\H.LowCode.PartsMetaSchema.csproj" />
 		<ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
+		<ProjectReference Include="..\H.LowCode.DesignEngine.Application.Contracts\H.LowCode.DesignEngine.Application.Contracts.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
