--- a/src/DesignEngine/H.LowCode.DesignEngine.Host.Client/H.LowCode.DesignEngine.Host.Client.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host.Client/H.LowCode.DesignEngine.Host.Client.csproj
@@ -6,18 +6,29 @@
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
   </PropertyGroup>
-	
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="Volo.Abp.Autofac.WebAssembly" />
   </ItemGroup>
 	
   <ItemGroup>
     <ProjectReference Include="..\..\Parts\H.LowCode.ComponentParts.BasicComponents\H.LowCode.ComponentParts.BasicComponents.csproj" />
     <ProjectReference Include="..\..\Parts\H.LowCode.ComponentParts.ExtensionComponents\H.LowCode.ComponentParts.ExtensionComponents.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine.Application.Contracts\H.LowCode.DesignEngine.Application.Contracts.csproj" />
     <ProjectReference Include="..\H.LowCode.MyApp\H.LowCode.MyApp.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
     <ProjectReference Include="..\H.LowCode.PartsDesignEngine\H.LowCode.PartsDesignEngine.csproj" />
     <ProjectReference Include="..\H.LowCode.Workbench\H.LowCode.Workbench.csproj" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <Content Update="wwwroot\appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 	
 </Project>
