--- a/src/RenderEngine/H.LowCode.RenderEngine.Host.Client/H.LowCode.RenderEngine.Host.Client.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host.Client/H.LowCode.RenderEngine.Host.Client.csproj
@@ -9,6 +9,7 @@
 	
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="Volo.Abp.Autofac.WebAssembly" />
   </ItemGroup>
 	
   <ItemGroup>
