在 Blazor WebAssembly 中使用 Dynamic API Proxy 存在问题，暂时使用 IHttpClientFactory 方式

--- a/src/DesignEngine/H.LowCode.DesignEngine.Host.Client/H.LowCode.DesignEngine.Host.Client.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host.Client/H.LowCode.DesignEngine.Host.Client.csproj
@@ -2,14 +2,19 @@
 
 	<Import Project="..\..\global.props" />
 
-	<PropertyGroup>
+  <PropertyGroup>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
+	<BlazorWebAssemblyLazyLoadAssemblies>true</BlazorWebAssemblyLazyLoadAssemblies>
+    <WasmEnableAot>false</WasmEnableAot>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="System.Text.Json" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Volo.Abp.Autofac.WebAssembly" />
+    <PackageReference Include="Volo.Abp.Http.Client" />
   </ItemGroup>
 	
   <ItemGroup>
