--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/appsettings.json
@@ -14,9 +14,8 @@
     "partsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\parts"
   },
   "RemoteServices": {
-    "designengine": {
-      "BaseUrl": "https://localhost:5181",
-      "UseCurrentAccessToken": "false"
+    "Default": {
+      "BaseUrl": "https://localhost:5181"
     }
   },
   "Sites": [
