--- a/src/RenderEngine/H.LowCode.RenderEngine.Host.Client/H.LowCode.RenderEngine.Host.Client.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host.Client/H.LowCode.RenderEngine.Host.Client.csproj
@@ -5,10 +5,13 @@
 	<PropertyGroup>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
+	<BlazorWebAssemblyLazyLoadAssemblies>true</BlazorWebAssemblyLazyLoadAssemblies>
+    <WasmEnableAot>false</WasmEnableAot>
   </PropertyGroup>
 	
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="System.Text.Json" />
     <PackageReference Include="Volo.Abp.Autofac.WebAssembly" />
   </ItemGroup>
 	
