--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- 官方库 -->
+    <PackageVersion Include="System.Text.Json" Version="9.0.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="9.0.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
@@ -25,17 +26,19 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Scripting" Version="4.6.0" />
     <!-- abp -->
-    <PackageVersion Include="Volo.Abp.Core" Version="9.0.0-rc.2" />
-    <PackageVersion Include="Volo.Abp.Autofac" Version="9.0.0-rc.2" />
-    <PackageVersion Include="Volo.Abp.Autofac.WebAssembly" Version="9.0.0-rc.2" />
-    <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="9.0.0-rc.2" />
-    <PackageVersion Include="Volo.Abp.Swashbuckle" Version="8.3.3" />
-    <PackageVersion Include="Volo.Abp.Ddd.Application.Contracts" Version="9.0.0-rc.2" />
-    <PackageVersion Include="Volo.Abp.Ddd.Domain" Version="9.0.0-rc.2" />
+    <PackageVersion Include="Volo.Abp.Core" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.Autofac" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.Autofac.WebAssembly" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.AspNetCore.Components.WebAssembly" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.Http.Client" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.Swashbuckle" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.Ddd.Application.Contracts" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.Ddd.Domain" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="8.3.0" />
     <!-- 第三方库 -->
     <PackageVersion Include="Serilog" Version="4.1.0" />
-    <PackageVersion Include="Serilog.Extensions.Logging" Version="8.0.0" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10398" />
     <PackageVersion Include="Serilog.Sinks.Async" Version="2.1.0" />
     <PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
@@ -44,11 +47,11 @@
     <PackageVersion Include="AntDesign" Version="1.0.0" />
     <PackageVersion Include="AntDesign.ProLayout" Version="1.0.0" />
     <PackageVersion Include="BlazorMonaco" Version="3.2.0" />
-    <PackageVersion Include="Mapsui.Blazor" Version="4.1.8" />
+    <PackageVersion Include="Mapsui.Blazor" Version="5.0.0-beta.4" />
     <PackageVersion Include="Markdig" Version="0.31.0" />
     <!-- 个人库 -->
-    <PackageVersion Include="H.Util.Blazor" Version="0.3.0" />
     <PackageVersion Include="H.Extensions.System" Version="0.3.0" />
+    <PackageVersion Include="H.Util.Blazor" Version="0.3.0" />
     <PackageVersion Include="H.Util.Ids" Version="0.3.2" />
     <!-- 单测 -->
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
