解决 Blazor WebAssembly 中 使用 Volo.Abp.Http.Client 生成代理类报错问题 (autofac 注册写法错误)

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -31,6 +31,7 @@
     <PackageVersion Include="Volo.Abp.Autofac.WebAssembly" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.AspNetCore.Components.WebAssembly" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.Ddd.Application" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Http.Client" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Swashbuckle" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Ddd.Application.Contracts" Version="9.0.0-rc.3" />
