--- a/src/RenderEngine/H.LowCode.RenderEngine.Abstraction/H.LowCode.RenderEngine.Abstraction.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Abstraction/H.LowCode.RenderEngine.Abstraction.csproj
@@ -13,12 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\Common\H.LowCode.ComponentBase\H.LowCode.ComponentBase.csproj" />
     <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+    <ProjectReference Include="..\H.LowCode.RenderEngine.Application.Contracts\H.LowCode.RenderEngine.Application.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
