--- a/src/RenderEngine/H.LowCode.RenderEngine.Application.Contracts/H.LowCode.RenderEngine.Application.Contracts.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Application.Contracts/H.LowCode.RenderEngine.Application.Contracts.csproj
@@ -4,6 +4,7 @@
 	<Import Project="..\..\nuget.publish.props" />
 	<ItemGroup>
 	  <PackageReference Include="Volo.Abp.Core" />
+	  <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" />
 	</ItemGroup>
 
 	<ItemGroup>
