--- a/src/RenderEngine/H.LowCode.RenderEngine.Application/H.LowCode.RenderEngine.Application.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Application/H.LowCode.RenderEngine.Application.csproj
@@ -5,6 +5,7 @@
 	
 	<ItemGroup>
 	  <PackageReference Include="Volo.Abp.Core" />
+	  <PackageReference Include="Volo.Abp.Ddd.Application" />
 	</ItemGroup>
 
 	<ItemGroup>
