--- a/src/RenderEngine/H.LowCode.RenderEngine.Host.Client/H.LowCode.RenderEngine.Host.Client.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host.Client/H.LowCode.RenderEngine.Host.Client.csproj
@@ -2,7 +2,7 @@
 
 	<Import Project="..\..\global.props" />
 
-	<PropertyGroup>
+  <PropertyGroup>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
 	<BlazorWebAssemblyLazyLoadAssemblies>true</BlazorWebAssemblyLazyLoadAssemblies>
@@ -12,13 +12,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="System.Text.Json" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Volo.Abp.Autofac.WebAssembly" />
+    <PackageReference Include="Volo.Abp.Http.Client" />
   </ItemGroup>
 	
   <ItemGroup>
     <ProjectReference Include="..\..\Parts\H.LowCode.ComponentParts.BasicComponents\H.LowCode.ComponentParts.BasicComponents.csproj" />
     <ProjectReference Include="..\..\Parts\H.LowCode.ComponentParts.ExtensionComponents\H.LowCode.ComponentParts.ExtensionComponents.csproj" />
     <ProjectReference Include="..\..\Parts\H.LowCode.ThemeParts.AntBlazor\H.LowCode.ThemeParts.AntBlazor.csproj" />
+    <ProjectReference Include="..\H.LowCode.RenderEngine.Application.Contracts\H.LowCode.RenderEngine.Application.Contracts.csproj" />
     <ProjectReference Include="..\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
   </ItemGroup>
 	
