--- a/src/DesignEngine/H.LowCode.MyApp/H.LowCode.MyApp.csproj
+++ b/src/DesignEngine/H.LowCode.MyApp/H.LowCode.MyApp.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Common\H.LowCode.ComponentBase\H.LowCode.ComponentBase.csproj" />
     <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine.Application.Contracts\H.LowCode.DesignEngine.Application.Contracts.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine.Model\H.LowCode.DesignEngine.Model.csproj" />
   </ItemGroup>
 
