--- a/src/RenderEngine/H.LowCode.RenderEngine.Host/H.LowCode.RenderEngine.Host.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host/H.LowCode.RenderEngine.Host.csproj
@@ -18,7 +18,7 @@
 		<ProjectReference Include="..\..\Common\H.LowCode.EntityFrameworkCore\H.LowCode.EntityFrameworkCore.csproj" />
 		<ProjectReference Include="..\..\Common\H.LowCode.Repository.JsonFile\H.LowCode.Repository.JsonFile.csproj" />
 		<ProjectReference Include="..\..\Common\H.LowCode.Repository.RemoteService\H.LowCode.Repository.RemoteService.csproj" />
-		<ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.HttpApi\H.LowCode.RenderEngine.HttpApi.csproj" />
+		<ProjectReference Include="..\H.LowCode.RenderEngine.Application\H.LowCode.RenderEngine.Application.csproj" />
 		<ProjectReference Include="..\H.LowCode.RenderEngine.Host.Client\H.LowCode.RenderEngine.Host.Client.csproj" />
 	</ItemGroup>
 </Project>
