--- a/src/RenderEngine/H.LowCode.RenderEngine.Host/appsettings.json
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host/appsettings.json
@@ -12,5 +12,10 @@
   "Meta": {
     "appsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\apps",
     "partsFilePath": "D:\\H\\code\\my\\H.LowCode\\meta\\parts"
+  },
+  "RemoteServices": {
+    "Default": {
+      "BaseUrl": "https://localhost:5191"
+    }
   }
 }
