--- a/src/Common/H.LowCode.ComponentBase/H.LowCode.ComponentBase.csproj
+++ b/src/Common/H.LowCode.ComponentBase/H.LowCode.ComponentBase.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
 	  <PackageReference Include="H.Util.Blazor" />
+	  <PackageReference Include="Volo.Abp.AspNetCore.Components" />
   </ItemGroup>
 
   <ItemGroup>
