--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -25,6 +25,7 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Scripting" Version="4.6.0" />
+    <PackageVersion Include="Volo.Abp.AspNetCore.Components" Version="9.0.0-rc.3" />
     <!-- abp -->
     <PackageVersion Include="Volo.Abp.Core" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Autofac" Version="9.0.0-rc.3" />
