--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/H.LowCode.ThemeParts.AntBlazor.csproj
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/H.LowCode.ThemeParts.AntBlazor.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\..\Common\H.LowCode.ComponentBase\H.LowCode.ComponentBase.csproj" />
     <ProjectReference Include="..\..\Common\H.LowCode.Model\H.LowCode.Model.csproj" />
     <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.Abstraction\H.LowCode.RenderEngine.Abstraction.csproj" />
+    <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.Application.Contracts\H.LowCode.RenderEngine.Application.Contracts.csproj" />
     <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
     <ProjectReference Include="..\..\Protocol\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
   </ItemGroup>
