--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -25,19 +25,19 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Scripting" Version="4.6.0" />
-    <PackageVersion Include="Volo.Abp.AspNetCore.Components" Version="9.0.0-rc.3" />
     <!-- abp -->
     <PackageVersion Include="Volo.Abp.Core" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Autofac" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Autofac.WebAssembly" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="9.0.0-rc.3" />
+    <PackageVersion Include="Volo.Abp.AspNetCore.Components" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.AspNetCore.Components.WebAssembly" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Ddd.Application" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Http.Client" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Swashbuckle" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Ddd.Application.Contracts" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.Ddd.Domain" Version="9.0.0-rc.3" />
-    <PackageVersion Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="8.3.0" />
+    <PackageVersion Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="9.0.0-rc.3" />
     <!-- 第三方库 -->
     <PackageVersion Include="Serilog" Version="4.1.0" />
     <PackageVersion Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10398" />
