--- a/src/DesignEngine/H.LowCode.MyApp/H.LowCode.MyApp.csproj
+++ b/src/DesignEngine/H.LowCode.MyApp/H.LowCode.MyApp.csproj
@@ -12,7 +12,10 @@
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
 	<PackageReference Include="AntDesign.ProLayout" />
 	<PackageReference Include="Microsoft.Extensions.Http" />
+	<PackageReference Include="System.Net.Http" />
 	<PackageReference Include="System.Net.Http.Json" />
+	<PackageReference Include="System.Private.Uri" />
+	<PackageReference Include="System.Text.RegularExpressions" />
 	<PackageReference Include="Volo.Abp.Core" />
     <PackageReference Include="H.Extensions.System" />
   </ItemGroup>
