--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,26 +7,27 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- 官方库 -->
-    <PackageVersion Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.0" />
+    <PackageVersion Include="System.Net.Http" Version="4.3.4" />
+    <PackageVersion Include="System.Private.Uri" Version="4.3.2" />
     <PackageVersion Include="System.Text.Json" Version="9.0.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
-    <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Components" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <!-- 分析器 -->
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Scripting" Version="4.6.0" />
-    <PackageVersion Include="Volo.Abp.AutoMapper" Version="9.0.0" />
     <!-- abp -->
     <PackageVersion Include="Volo.Abp.Core" Version="9.0.0" />
     <PackageVersion Include="Volo.Abp.Autofac" Version="9.0.0" />
@@ -34,9 +35,10 @@
     <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="9.0.0-rc.3" />
     <PackageVersion Include="Volo.Abp.AspNetCore.Components" Version="9.0.0" />
     <PackageVersion Include="Volo.Abp.AspNetCore.Components.WebAssembly" Version="9.0.0" />
-    <PackageVersion Include="Volo.Abp.Ddd.Application" Version="9.0.0" />
-    <PackageVersion Include="Volo.Abp.Http.Client" Version="9.0.0" />
     <PackageVersion Include="Volo.Abp.Swashbuckle" Version="9.0.0" />
+    <PackageVersion Include="Volo.Abp.AutoMapper" Version="9.0.0" />
+    <PackageVersion Include="Volo.Abp.Http.Client" Version="9.0.0" />
+    <PackageVersion Include="Volo.Abp.Ddd.Application" Version="9.0.0" />
     <PackageVersion Include="Volo.Abp.Ddd.Application.Contracts" Version="9.0.0" />
     <PackageVersion Include="Volo.Abp.Ddd.Domain" Version="9.0.0" />
     <PackageVersion Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="9.0.0-rc.3" />
