--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/H.LowCode.ThemeParts.AntBlazor.csproj
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/H.LowCode.ThemeParts.AntBlazor.csproj
@@ -11,7 +11,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="AntDesign.ProLayout" />
     <PackageReference Include="Microsoft.Extensions.Http" />
+    <PackageReference Include="System.Net.Http" />
     <PackageReference Include="System.Net.Http.Json" />
+    <PackageReference Include="System.Private.Uri" />
+    <PackageReference Include="System.Text.RegularExpressions" />
     <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
