添加基础组件（Input、InputNumber、Checkbox、Radio、DatePicker 等）

--- a/meta/apps/caseapp/caseapp.json
+++ b/meta/apps/caseapp/caseapp.json
@@ -1,1 +1,1 @@
-﻿{"id":"caseapp","n":"用例系统","desc":"展示不同类型页面案例","state":0}
+﻿{"id":"caseapp","n":"用例系统","desc":"展示典型页面案例","pub":0,"platform":[0,2],"createdTime":"0001-01-01T00:00:00","modifiedTime":"2025-01-02T15:03:41.2355394Z"}
