--- a/src/DesignEngine/H.LowCode.PartsDesignEngine/H.LowCode.PartsDesignEngine.csproj
+++ b/src/DesignEngine/H.LowCode.PartsDesignEngine/H.LowCode.PartsDesignEngine.csproj
@@ -22,6 +22,7 @@
 		<ProjectReference Include="..\..\Common\H.LowCode.Model\H.LowCode.Model.csproj" />
 		<ProjectReference Include="..\..\Protocol\H.LowCode.PartsMetaSchema\H.LowCode.PartsMetaSchema.csproj" />
 		<ProjectReference Include="..\H.LowCode.DesignEngine.Abstraction\H.LowCode.DesignEngine.Abstraction.csproj" />
+		<ProjectReference Include="..\H.LowCode.DesignEngine.Application.Contracts\H.LowCode.DesignEngine.Application.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
